public/stylesheets/style.css
html, body {
    height: 100%;
    font-family: Helvetica, Arial;
    font-size: 14px;
    line-height: 1.25;
    margin: 0;
    padding: 0;
    width: 100%;
}
html * {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -o-box-sizing: border-box;
    -ms-box-sizing: border-box;
}

a {
    color: #000;
}

em {
    font-style: normal;
    font-weight: bold;
}

header {
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.80, #334), color-stop(0.00, #001));
    background: -webkit-linear-gradient(top, #334 0%, #001 80%);
    background: -moz-linear-gradient(top, #334 0%, #001 80%);
    background: -o-linear-gradient(top, #334 0%, #001 80%);
    background: -ms-linear-gradient(top, #334 0%, #001 80%);
    background: linear-gradient(to bottom, #334 0%, #001 80%);
    border-color: #556 #000 #000 #000;
    border-style: solid;
    border-width: 1px;
    color: #fff;
    margin: 0;
    padding: 10px 20px 10px 20px;
    position: relative;
    text-shadow: #001 0 -1px;
}

h1 {
    font-size: 100%;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

#logInForm {
    bottom: 7px;
    display: none;
    position: absolute;
    right: 20px;
}
#logInForm dl, #logInForm dt, #logInForm dd, #logInForm p {
    display: inline;
    margin: 0;
    padding: 0;
}
#logOutLink {
    bottom: 10px;
    display: none;
    margin: 0;
    padding: 0;
    position: absolute;
    right: 20px;
}
#logOutLink a {
    color: #fff;
}
#logOutLink img {
    position: relative;
    top: 2px;
}

#main {
}
.sidebar {
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.80, #eef), color-stop(0.00, #bbc));
    background: -webkit-linear-gradient(top, #eef 0%, #bbc 80%);
    background: -moz-linear-gradient(top, #eef 0%, #bbc 80%);
    background: -o-linear-gradient(top, #eef 0%, #bbc 80%);
    background: -ms-linear-gradient(top, #eef 0%, #bbc 80%);
    background: linear-gradient(to bottom, #eef 0%, #bbc 80%);
    border-color: #fff #aab #aab #aab;
    border-style: solid;
    border-width: 1px;
    margin: 0;
    overflow-y: scroll;
    padding: 10px 20px;
    position: relative;
    width: 200px;
    word-wrap: break-word;
}
.sidebar h2 {
    font-size: 100%;
    font-weight: bold;
    margin: 0 0 5px 0;
    padding: 0;
}
.sidebar menu {
    margin: 0;
    padding: 0;
    position: absolute;
    right: 20px;
    top: 10px;
}
.sidebar input {
    margin: 0;
    padding: 0;
}
.sidebar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.sidebar li {
    margin-bottom: 5px;
}

#channels a.dirty {
    color: #900;
}

#messages {
    background-color: #fff;
    margin: 0;
    padding: 0;
}
#messages h2 {
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.80, #889), color-stop(0.00, #556));
    background: -webkit-linear-gradient(top, #889 0%, #556 80%);
    background: -moz-linear-gradient(top, #889 0%, #556 80%);
    background: -o-linear-gradient(top, #889 0%, #556 80%);
    background: -ms-linear-gradient(top, #889 0%, #556 80%);
    background: linear-gradient(to bottom, #889 0%, #556 80%);
    border-color: #99a #445 #445 #445;
    border-style: solid;
    border-width: 1px;
    color: #fff;
    font-size: 100%;
    font-weight: bold;
    margin: 0;
    padding: 10px 20px;
    text-shadow: #556 0 -1px;
}
#messages > section {
    margin: 0;
    overflow-y: auto;
    padding: 10px 20px;
}
#messages > section[data-channel-name=""] {
    background-color: #ccc;
    box-shadow:         inset 0 0 8px #000;
    -moz-box-shadow:    inset 0 0 8px #000;
    -webkit-box-shadow: inset 0 0 8px #000;
}
#messages > section table.messages {
    border-collapse: separate;
    border-spacing: 0 5px;
    table-layout: fixed;
    width: 100%;
}
#messages > section td {
    vertical-align: top;
}
#messages > section td.userName {
    color: #999;
    padding-right: 10px;
    text-align: right;
    width: 100px;
    word-wrap: break-word;
}
#messages > section td.body {
    word-wrap: break-word;
}
#messages > section td.createdAt {
    color: #999;
    font-size: 80%;
    padding-left: 10px;
    text-align: right;
    width: 50px;
}

.toolIcon {
    cursor: pointer;
}

li .toolIcon {
    margin-left: 5px;
    position: absolute;
}

.dialog {
    background-color: #fff;
    box-shadow:         0 0 8px #000;
    -moz-box-shadow:    0 0 8px #000;
    -webkit-box-shadow: 0 0 8px #000;
    display: none;
    padding: 10px 20px;
    position: absolute;
    z-index: 2;
}
.dialog h2 {
    font-size: 100%;
    margin: 0;
}
.dialog table {
    border-collapse: separate;
    border-spacing: 0 5px;
    margin: 10px 0;
}
.dialog th {
    font-weight: normal;
    padding-right: 5px;
    text-align: right;
    vertical-align: top;
}
.dialog p.buttons {
    margin: 0;
    text-align: right;
}
#dialogBackground {
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    height: 100%;
    left: 0;
    padding-left: auto;
    padding-right: auto;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 1;
}

/* box */

body {
    display: box;
    display: -webkit-box;
    display: -moz-box;
    display: -o-box;
    display: -ms-box;
    box-orient: vertical;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -o-box-orient: vertical;
    -ms-box-orient: vertical;
}
body > header {
    width: 100%;
}
body > #main {
    box-flex: 1;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -o-box-flex: 1;
    -ms-box-flex: 1;
    width: 100%;
}

#main {
    display: box;
    display: -webkit-box;
    display: -moz-box;
    display: -o-box;
    display: -ms-box;
    width: 100%;
}
#main > #channels {
}
#main > #messages {
    box-flex: 1;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -o-box-flex: 1;
    -ms-box-flex: 1;
    overflow: hidden;
}
#main > #users {
}

#addChannelForm p {
    display: box;
    display: -webkit-box;
    display: -moz-box;
    display: -o-box;
    display: -ms-box;
    width: 100%;
}
#addChannelForm p > input:nth-child(1) {
    box-flex: 1;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -o-box-flex: 1;
    -ms-box-flex: 1;
    display: block;
}
#addChannelForm p > input:nth-child(2) {
    display: block;
}

#messages {
    display: box;
    display: -webkit-box;
    display: -moz-box;
    display: -o-box;
    display: -ms-box;
    box-orient: vertical;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -o-box-orient: vertical;
    -ms-box-orient: vertical;
}
#messages > h2 {
    height: auto;
}
#messages > section {
    box-flex: 1;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -o-box-flex: 1;
    -ms-box-flex: 1;
}
#messages > form {
    width: 100%;
    height: auto;
}

#postMessageForm p {
    display: box;
    display: -webkit-box;
    display: -moz-box;
    display: -o-box;
    display: -ms-box;
    width: 100%;
}
#postMessageForm p > input:nth-child(1) {
    box-flex: 1;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -o-box-flex: 1;
    -ms-box-flex: 1;
    display: block;
}
#postMessageForm p > input:nth-child(2) {
    display: block;
}

